--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,20 @@ composer.phar
 phpunit.phar
 # local phpunit config
 /phpunit.xml
+
+# Ignore any file named foo.txt.
+.bowerrc
+# Ignore any file named foo.txt.
+composer.json
+# Ignore any file named foo.txt.
+composer.lock
+# Ignore any file named foo.txt.
+LICENSE.md
+# Ignore any file named foo.txt.
+README.md
+# Ignore any file named foo.txt.
+requirements.php
+# Ignore any file named foo.txt.
+yii
+# Ignore any file named foo.txt.
+yii.bat
